# farmles_harvester

./: .gitignore  02_sprint_stage_00_harness.md  README.md  aggregator_seed_urls.txt  backend_may11_seed_urls.txt  pyproject.toml  real_smoke_seed_urls.txt
.github/workflows/: deploy-test-fixtures.yml
config/: aggregator_seed_urls.txt  fetch_error.txt
docs/: 01_orchestrator_design.md  02_state_design_pattern.md  overview.md  pipeline_artifact.md  pipeline_artifacts.md
docs/.obsidian/: workspace.json
docs/dynamic_pipeline/: crawl4ai_fetcher.md  overview.md
docs/pipeline/: 00_normalized_source_leads.md  01_validate_links.md  02_discover_links.md  03_score_candidate_links.md  03_scoring_model.md  04_generate_markdown_pages.md  05_strip_boilerplate_blocks.md
docs/reference/: fast_mode.md  pipeline_artifacts.md  registry_integration.md  url_registry.md  url_state.md
docs/runbook/: real_world_smoke_test_runbook.md
docs/sprints/: 00_sprint_tooling_setup.md  01_sprint_pure_logic_unit_tests.md  03_sprint_record_contracts.md  04_sprint_pipeline_primitives.md  05_sprint_validate_urls_harness.md  06_sprint_discover_and_score_harnesses.md  07_sprint_html_to_markdown_logic.md  08_sprint_generate_markdown_pages_harness.md  09_sprint_minimal_orchestrator_cli.md  10_sprint_real_world_smoke_test.md  11_sprint_markdown_stability_hardening.md  12_sprint_source_output_structure_correction.md  13_sprint_html_boilerplate_stripping.md  14_sprint_index_php_url_normalization.md
farmles_harvester/: cli.py  cli_detect_render.py  cli_report.py  cli_scan_relevance.py  constants.py
(+82 files in other folders)
