[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "farmles_harvester"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "markdownify",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
farmles_harvester = "farmles_harvester.cli:main"

[tool.setuptools.packages.find]
include = ["farmles_harvester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
