[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "farmles_harvester"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "markdownify",
    "pyyaml",
    "requests",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
farmles_harvester = "farmles_harvester.cli:main"
report_crawl = "farmles_harvester.cli_report:main"
scan_relevance = "farmles_harvester.cli_scan_relevance:main"
detect_render = "farmles_harvester.cli_detect_render:main"

[tool.setuptools.packages.find]
include = ["farmles_harvester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that hit real URLs — run with pytest -m integration",
]
